--- a/styles/table.scss
+++ b/styles/table.scss
@@ -1,45 +1,85 @@
+@mixin item {
+  display: inline-flex;
+  align-items: center;
+  padding-left: 14px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+@mixin cell {
+  position: relative;
+  display: inline-flex;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 100%;
+  height: 48px;
+  box-sizing: border-box;
+}
+
 .odos-table {
   width: 100%;
   overflow-x: scroll;
   height: auto;
   .odos-table-title-cell {
-    position: relative;
-    display: inline-flex;
-    justify-content: space-between;
-    align-items: center;
-    min-width: 100%;
-    height: 48px;
+    @include cell;
     background: #f1f5ff;
-    box-sizing: border-box;
-
     .odos-table-title {
-      display: inline-flex;
-      align-items: center;
-      padding-left: 14px;
-      width: 100%;
-      height: 100%;
+      @include item;
+    }
+    .odos-table-title-fixed,
+    .odos-table-title-fixed-left {
+      background: #f1f5ff;
+      position: sticky;
+      left: 0;
+      z-index: 10;
+    }
+    .odos-table-title-fixed-right {
+      background: #f1f5ff;
+      position: sticky;
+      right: 0;
+      z-index: 10;
     }
   }
   .odos-table-content-cell {
-    position: relative;
-    display: inline-flex;
-    align-items: center;
-    justify-content: space-between;
-    min-width: 100%;
-    height: 48px;
-    box-sizing: border-box;
+    @include cell;
     &:nth-child(2n-1) {
       background-color: #f8faff;
+      .odos-table-content-fixed,
+      .odos-table-content-fixed-left {
+        background: #f8faff;
+      }
+      .odos-table-content-fixed-right {
+        background: #f8faff;
+      }
     }
     &:hover {
       background: #f2f3f5;
+      .odos-table-content-fixed,
+      .odos-table-content-fixed-left {
+        background: #f2f3f5;
+      }
+      .odos-table-content-fixed-right {
+        background: #f2f3f5;
+      }
     }
     .odos-table-content {
-      display: inline-flex;
-      align-items: center;
-      padding-left: 14px;
-      width: 100%;
-      height: 100%;
+      @include item;
+    }
+    .odos-table-content-fixed,
+    .odos-table-content-fixed-left {
+      position: sticky;
+      left: 0;
+      z-index: 10;
+      background: #fff;
+    }
+    .odos-table-content-fixed-right {
+      position: sticky;
+      right: 0;
+      z-index: 10;
+      background: #fff;
     }
   }
 }
