--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,3 +1,6 @@
 @import './button.scss';
 @import './icon.scss';
 @import './input.scss';
+@import './inputNumber.scss';
+@import './radio.scss';
+@import './table.scss';
