--- a/styles/table.scss
+++ b/styles/table.scss
@@ -1,121 +1,53 @@
-.odos-table-container {
-  overflow: scroll;
+.odos-table {
   width: 100%;
-
-  .odos-table {
-    min-width: 100%;
-    border: 0;
-    border-spacing: 0;
-    overflow: scroll;
-    .odos-table-thead {
-      .odos-table-tr {
-        height: 48px;
-        background: #f1f5ff;
-        .odos-table-th {
-          border: none;
-          .odos-table-span {
-            display: block;
+  .ant-table {
+    .ant-table-container {
+      table {
+        * {
+          border: none !important;
+          border-inline-end: none !important;
+        }
+        tr {
+          .ant-table-cell-fix-left::after,
+          .ant-table-cell-fix-right::after {
+            border-inline-end: none !important;
           }
-        }
-        .odos-table-title-fixed,
-        .odos-table-title-fixed-left {
-          background: #f1f5ff;
-          position: sticky;
-          left: 0;
-          z-index: 10;
-        }
-        .odos-table-title-fixed-right {
-          background: #f1f5ff;
-          position: sticky;
-          right: 0;
-          z-index: 10;
-        }
-
-        .shadow-left::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          width: 10px;
-          height: 100%;
-          right: -10px;
-          box-shadow: inset 6px 0 8px -3px #00000026;
-        }
-
-        /* 滚动阴影右边 */
-        .shadow-right::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          width: 10px;
-          height: 100%;
-          left: -10px;
-          // background: linear-gradient(to left, #505050, transparent);
-          box-shadow: inset -6px 0 8px -3px #00000026;
-        }
-      }
-    }
-    .odos-table-tbody {
-      .odos-table-tr {
-        height: 48px;
-        &:nth-child(2n) {
-          background: #f8faff;
-          .odos-table-content-fixed,
-          .odos-table-content-fixed-left {
-            background: #f8faff;
+          &:nth-child(2n) {
+            &:hover {
+              .ant-table-cell-fix-left,
+              .ant-table-cell-fix-right {
+                background-color: #fafafa;
+                &::after {
+                  border-inline-end: none !important;
+                }
+              }
+            }
+            background-color: #f8faff;
+            .ant-table-cell-fix-left,
+            .ant-table-cell-fix-right {
+              border-inline-end: none !important;
+              background-color: #f8faff;
+              &::after {
+                border-inline-end: none !important;
+              }
+            }
           }
-          .odos-table-content-fixed-right {
-            background: #f8faff;
+          &:nth-child(2n - 1) {
+            background-color: #fff;
           }
-        }
-        .odos-table-td {
-          border: none;
-        }
-
-        &:hover {
-          background: #f2f3f5;
-          .odos-table-content-fixed,
-          .odos-table-content-fixed-left {
-            background: #f2f3f5;
-          }
-          .odos-table-content-fixed-right {
-            background: #f2f3f5;
+          td,
+          th {
+            .ant-checkbox {
+              border: 1px solid #d9d9d9 !important;
+              border-radius: 4px;
+            }
           }
         }
 
-        .odos-table-content-fixed,
-        .odos-table-content-fixed-left {
-          position: sticky;
-          left: 0;
-          z-index: 10;
-          background: #fff;
-        }
-        .odos-table-content-fixed-right {
-          position: sticky;
-          right: 0;
-          z-index: 10;
-          background: #fff;
-        }
-
-        /* 滚动阴影左边 */
-        .shadow-left::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          width: 10px;
-          height: 100%;
-          right: -10px;
-          box-shadow: inset 6px 0 8px -3px #00000026;
-        }
-
-        /* 滚动阴影右边 */
-        .shadow-right::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          width: 10px;
-          height: 100%;
-          left: -10px;
-          box-shadow: inset -6px 0 8px -3px #00000026;
+        .ant-table-thead {
+          .ant-table-cell {
+            background-color: #f1f5ff;
+          }
         }
       }
     }
