--- a/styles/radio.scss
+++ b/styles/radio.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     height: 36px;
+    font-size: 14px;
     padding: 0 20px;
     margin: 0 1px;
     color: #4e5969;
