--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,10 @@
 @import './button.scss';
+@import './checkBox.scss';
 @import './icon.scss';
 @import './input.scss';
 @import './inputNumber.scss';
+@import './message.scss';
 @import './radio.scss';
+@import './select.scss';
 @import './table.scss';
+@import './textarea.scss';
