--- a/styles/input.scss
+++ b/styles/input.scss
@@ -1,6 +1,6 @@
 .odos-input {
   position: relative;
-  min-width: none;
+  width: 100%;
   height: 40px;
   input {
     display: flex;
@@ -19,6 +19,13 @@
     &:focus-within {
       border: 1px solid #2e6ce4;
       background: #fff;
+    }
+  }
+  &.disabled {
+    background: #f2f3f5;
+    border-radius: 8px;
+    input:hover {
+      background: #f2f3f5;
     }
   }
 }
