--- a/styles/pagination.scss
+++ b/styles/pagination.scss
@@ -6,8 +6,11 @@
   }
   .ant-pagination-item-active {
     background: #2e6ce4;
+    &:hover a {
+      color: #ffffff;
+    }
     a {
-      color: #ffffff !important;
+      color: #ffffff;
     }
   }
 }
