--- a/styles/select.scss
+++ b/styles/select.scss
@@ -4,24 +4,53 @@
 }
 
 .odos-select {
+  position: relative;
   @include wh(40px);
+  border: 1px solid #f2f3f5;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  &:hover {
+    background: #e5e6eb;
+    border-radius: 8px;
+  }
+  &:focus-within {
+    border: 1px solid #2e6ce4;
+    background: #fff;
+    border-radius: 8px;
+  }
+  .title {
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    font-size: 14px;
+    color: #4e5969;
+    border-right: 1px solid #c9cdd4;
+    z-index: 1;
+  }
+  .odos-select-isTitle {
+    padding-left: 80px;
+  }
   .ant-select {
     &.ant-select-focused .ant-select-selector {
       box-shadow: none !important;
-      border-color: #2e6ce4 !important;
-    }
-    &:hover .ant-select-selector {
-      border-color: #2e6ce4 !important;
     }
     @include wh(40px);
     .ant-select-selector {
+      border: none !important;
       display: flex;
       align-items: center;
       box-shadow: none;
+      background: transparent;
       @include wh(40px);
     }
     .ant-select-selection-search-input {
       @include wh(100%);
+      background: transparent;
     }
   }
 }
