--- a/styles/datePicker.scss
+++ b/styles/datePicker.scss
@@ -1,2 +1,23 @@
+.odos-date-picker * {
+  cursor: pointer !important;
+  width: 100%;
+}
+
 .odos-date-picker {
+  position: relative;
+  .odos-date-picker-content {
+    &.bottom {
+      position: absolute;
+      top: 44px;
+      width: 312px;
+      height: 340px;
+      border-radius: 8px;
+      box-sizing: border-box;
+      background-color: #fff;
+      border: 1px solid #e5e6eb;
+      box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.12);
+      padding: 0 16px;
+      z-index: 1000;
+    }
+  }
 }
