--- a/styles/datePicker.scss
+++ b/styles/datePicker.scss
@@ -2,22 +2,98 @@
   cursor: pointer !important;
   width: 100%;
 }
-
 .odos-date-picker {
   position: relative;
   .odos-date-picker-content {
     &.bottom {
       position: absolute;
       top: 44px;
-      width: 312px;
-      height: 340px;
-      border-radius: 8px;
+    }
+    * {
+      -webkit-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+    }
+    width: 312px;
+    height: 340px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    background-color: #fff;
+    border: 1px solid #e5e6eb;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.12);
+    padding: 0 16px;
+    z-index: 1000;
+    .odos-date-picker-header {
+      width: 280px;
+      height: 44px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
       box-sizing: border-box;
-      background-color: #fff;
-      border: 1px solid #e5e6eb;
-      box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.12);
-      padding: 0 16px;
-      z-index: 1000;
+      border-bottom: 1px solid #f4f4f5;
+      padding-left: 14px;
+      padding-right: 4px;
+      .odos-date-picker-header-year {
+        font-size: 18px;
+        font-weight: 500;
+      }
+      .odos-date-picker-btn {
+        width: 200px;
+        display: flex;
+        justify-content: space-between;
+        .odos-date-picker-header-next,
+        .odos-date-picker-header-pre {
+          width: 30px;
+          height: 30px;
+          border-radius: 50%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          &:hover {
+            background: #e5e6eb;
+          }
+          &:active {
+            background: #86909c;
+          }
+        }
+      }
+    }
+    .odos-date-picker-body {
+      width: 280px;
+      height: 280px;
+      box-sizing: border-box;
+      .odos-date-picker-day-title,
+      .odos-date-picker-day-content {
+        display: flex;
+        flex-wrap: wrap;
+        .odos-date-picker-day-item {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          width: 30px;
+          height: 30px;
+          border-radius: 8px;
+          margin: 5px;
+        }
+      }
+      .odos-date-picker-day-content {
+        .odos-date-picker-day-item {
+          &.pre,
+          &.next {
+            color: #bfbfbf;
+          }
+          &.active {
+            background: #2e6ce4;
+            color: #fff;
+          }
+          &:hover {
+            background: #e5e6eb;
+          }
+          &:active {
+            background: #86909c;
+          }
+        }
+      }
     }
   }
 }
