--- a/styles/datePicker.scss
+++ b/styles/datePicker.scss
@@ -4,6 +4,35 @@
 }
 .odos-date-picker {
   position: relative;
+  .odos-input {
+    display: flex;
+    box-sizing: border-box;
+    align-items: center;
+    border-radius: 8px;
+    padding: 10px 16px;
+    background: #f2f3f5;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #f2f3f5;
+    outline: none;
+    &:hover {
+      background: #e5e6eb;
+    }
+    &.odos-input-focus {
+      border: 1px solid #2e6ce4;
+      background: #fff;
+    }
+    &:blur {
+      border: 1px solid #2e6ce4;
+      background: #fff;
+    }
+    &::placeholder {
+      position: relative;
+      top: 1px;
+      color: #86909c;
+    }
+  }
+
   .odos-date-picker-content {
     &.bottom {
       position: absolute;
