--- a/styles/radio.scss
+++ b/styles/radio.scss
@@ -5,6 +5,7 @@
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: center;
     height: 36px;
     font-size: 14px;
     padding: 0 20px;
