--- a/styles/pagination.scss
+++ b/styles/pagination.scss
@@ -1,16 +1,21 @@
 .odos-pagination {
-  .ant-pagination-prev,
-  .ant-pagination-next,
-  .ant-pagination-item {
-    background: #f2f3f5;
-  }
-  .ant-pagination-item-active {
-    background: #2e6ce4;
-    &:hover a {
-      color: #ffffff;
+  .ant-pagination {
+    .ant-pagination-prev,
+    .ant-pagination-next,
+    .ant-pagination-item {
+      background: #f2f3f5;
     }
-    a {
-      color: #ffffff;
+    .ant-pagination-item-link {
+      padding: 0;
+    }
+    .ant-pagination-item-active {
+      background: #2e6ce4;
+      &:hover a {
+        color: #ffffff;
+      }
+      a {
+        color: #ffffff;
+      }
     }
   }
 }
