--- a/styles/pagination.scss
+++ b/styles/pagination.scss
@@ -1,5 +1,5 @@
 .odos-pagination {
-  .ant-pagination {
+  :deep .ant-pagination {
     .ant-pagination-prev,
     .ant-pagination-next,
     .ant-pagination-item {
