--- a/styles/select.scss
+++ b/styles/select.scss
@@ -23,7 +23,7 @@
   &.odos-select-disabled:hover {
     background: #fff;
   }
-  .title {
+  .odos-select-title {
     position: absolute;
     width: 80px;
     height: 20px;
