--- a/styles/input.scss
+++ b/styles/input.scss
@@ -2,6 +2,8 @@
   position: relative;
   width: 100%;
   height: 40px;
+  display: flex;
+  align-items: center;
   input {
     display: flex;
     box-sizing: border-box;
@@ -23,6 +25,22 @@
     &::placeholder {
       color: #86909c;
     }
+    &.odos-input-isTitle {
+      padding-left: 88px;
+    }
+  }
+  .odos-input-title {
+    position: absolute;
+    width: 80px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+    font-size: 14px;
+    color: #4e5969;
+    border-right: 1px solid #c9cdd4;
+    z-index: 1;
   }
   &.odos-input-disabled {
     background: #f2f3f5;
