--- a/styles/datePicker.scss
+++ b/styles/datePicker.scss
@@ -72,6 +72,7 @@
     padding: 0 16px;
     z-index: 1000;
     .odos-date-picker-header {
+      @include useSelect();
       width: 280px;
       height: 44px;
       display: flex;
@@ -142,6 +143,14 @@
           }
         }
       }
+    }
+  }
+  &.odos-date-picker-disabled {
+    background: #f2f3f5;
+    border-radius: 8px;
+    input:hover {
+      cursor: not-allowed;
+      background: #f2f3f5;
     }
   }
 }
