--- a/styles/datePicker.scss
+++ b/styles/datePicker.scss
@@ -9,9 +9,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  * {
-    width: 100%;
-  }
+  height: 40px;
   .odos-date-picker-title {
     position: absolute;
     width: 80px;
@@ -85,9 +83,10 @@
       .odos-date-picker-header-year {
         font-size: 18px;
         font-weight: 500;
+        width: 200px;
       }
       .odos-date-picker-btn {
-        width: 200px;
+        width: 150px;
         display: flex;
         justify-content: space-between;
         .odos-date-picker-header-next,
