--- a/styles/index.scss
+++ b/styles/index.scss
@@ -7,5 +7,6 @@
 @import './radio.scss';
 @import './select.scss';
 @import './table.scss';
+@import './tag.scss';
 @import './textarea.scss';
 @import './pagination.scss';
