--- a/styles/table.scss
+++ b/styles/table.scss
@@ -1,10 +1,11 @@
+@mixin borderNone {
+  border: none !important;
+  border-inline-end: none !important;
+}
+
 .odos-table {
   width: 100%;
   :deep .ant-table {
-    * {
-      border: none !important;
-      border-inline-end: none !important;
-    }
     .ant-table-container {
       table {
         .ant-table-thead {
@@ -15,10 +16,7 @@
         tr {
           td,
           th {
-            .ant-checkbox {
-              border: 1px solid #d9d9d9 !important;
-              border-radius: 4px;
-            }
+            @include borderNone();
           }
         }
         .odos-table-even-row {
