--- a/styles/tag.scss
+++ b/styles/tag.scss
@@ -7,8 +7,8 @@
   padding: 0 8px;
   box-sizing: border-box;
   &.odos-default-tag {
-    border: 1px solid #c9cdd4 !important;
-    color: #1D2129;
+    border: 1px solid #c9cdd4;
+    color: #1d2129;
   }
   &.odos-dark-tag {
     background: #2e6ce4;
@@ -19,7 +19,7 @@
     color: #2e6ce4;
   }
   &.odos-line-tag {
-    border: 1px solid #2e6ce4 !important;
+    border: 1px solid #2e6ce4;
     color: #2e6ce4;
   }
 
