--- a/packages/Tabs/src/index.module.scss
+++ b/packages/Tabs/src/index.module.scss
@@ -6,6 +6,7 @@
   padding: 0 12px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin: 0 6px;
+  color: #4e5969;
   cursor: pointer;
   &:first-child {
     margin-left: 0;
