--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,12 +1,14 @@
 @import './button.scss';
 @import './checkBox.scss';
+@import './empty.scss';
 @import './icon.scss';
 @import './input.scss';
 @import './inputNumber.scss';
 @import './message.scss';
+@import './pagination.scss';
+@import './popover.scss';
 @import './radio.scss';
 @import './select.scss';
 @import './table.scss';
 @import './tag.scss';
 @import './textarea.scss';
-@import './pagination.scss';
