--- a/styles/empty.scss
+++ b/styles/empty.scss
@@ -1,3 +1,8 @@
-.odos-empty{
+.odos-empty {
   width: 100%;
+  :deep .ant-empty {
+    .ant-empty-description {
+      color: rgba(0, 0, 0, 0.25);
+    }
+  }
 }
