--- a/styles/button.scss
+++ b/styles/button.scss
@@ -1,6 +1,7 @@
 @mixin bgc($bgc) {
   background-color: $bgc;
 }
+
 @mixin border($color) {
   box-sizing: border-box;
   color: $color;
@@ -15,6 +16,10 @@
   }
 }
 
+.odos-btn {
+  cursor: pointer;
+}
+
 .odos-btn,
 .odos-btn--default {
   @include bgc(#f2f3f5);
@@ -24,9 +29,11 @@
   align-items: center;
   color: #1d2129;
   border-radius: 8px;
+
   &:hover {
     @include bgc(#e5e6eb);
   }
+
   &:active {
     @include bgc(#c9cdd4);
   }
@@ -48,6 +55,7 @@
   &.odos-btn-size--medium {
     height: 32px;
     padding: 0 16px;
+
     .odos-icon {
       margin-right: 6px;
     }
@@ -56,6 +64,7 @@
   &.odos-btn-size--small {
     height: 28px;
     padding: 0 12px;
+
     .odos-icon {
       margin-right: 4px;
     }
@@ -64,9 +73,11 @@
   &.odos-btn--primary {
     @include bgc(#2e6ce4);
     color: #ffffff;
+
     &:hover {
       @include bgc(#6d99ed);
     }
+
     &:active {
       @include bgc(#0042c1);
     }
@@ -82,10 +93,12 @@
     mix-blend-mode: multiply;
     @include border(#c9cdd4);
     color: #1d2129;
+
     &:hover {
       @include bgc(#fff);
       @include border(#6d99ed);
     }
+
     &:active {
       @include bgc(#fff);
       @include border(#0042c1);
@@ -102,12 +115,15 @@
     mix-blend-mode: multiply;
     color: #2e6ce4;
     background-color: transparent;
+
     &:hover {
       @include bgc(#f2f3f5);
     }
+
     &:active {
       @include bgc(#e5e6eb);
     }
+
     &.is-disabled {
       color: #96b5f1;
       @include bgc(transparent);
@@ -130,6 +146,7 @@
     height: 36px;
     width: 36px;
     padding: 0;
+
     &.odos-btn-size--large {
       height: 36px;
       width: 36px;
@@ -155,6 +172,7 @@
     &:hover .odos-icon--line .icon {
       fill: #6d99ed !important;
     }
+
     &:active .odos-icon--line .icon {
       fill: #0042c1 !important;
     }
