--- a/styles/textarea.scss
+++ b/styles/textarea.scss
@@ -4,6 +4,7 @@
   :deep .ant-input {
     border-color: transparent;
     background: #f2f3f5;
+    height: 100%;
     &:hover {
       background: #e5e6eb;
       border-color: transparent;
