--- a/styles/index.scss
+++ b/styles/index.scss
@@ -11,5 +11,6 @@
 @import './radio.scss';
 @import './select.scss';
 @import './table.scss';
+@import './tabs.scss';
 @import './tag.scss';
 @import './textarea.scss';
