--- a/styles/select.scss
+++ b/styles/select.scss
@@ -1,20 +1,22 @@
 @mixin wh($h) {
   width: 100%;
-  height: $h !important;
+  height: $h;
 }
 
 .odos-select {
-  position: relative;
   @include wh(40px);
+  position: relative;
   background: #f2f3f5;
   border: 1px solid #f2f3f5;
   border-radius: 8px;
   display: flex;
   align-items: center;
+
   &:hover {
     background: #e5e6eb;
     border-radius: 8px;
   }
+
   &:focus-within {
     border: 1px solid #2e6ce4;
     background: #fff;
@@ -24,6 +26,7 @@
   &.odos-select-disabled:hover {
     background: #fff;
   }
+
   .odos-select-title {
     position: absolute;
     width: 80px;
@@ -42,7 +45,9 @@
     &.ant-select-focused .ant-select-selector {
       box-shadow: none !important;
     }
+
     @include wh(40px);
+
     .ant-select-selector {
       border: none !important;
       display: flex;
@@ -51,21 +56,26 @@
       background: transparent;
       padding-left: 8px;
       @include wh(40px);
+
       .ant-select-selection-placeholder {
         color: #86909c;
       }
     }
+
     &.odos-select-isTitle .ant-select-selector {
       padding-left: 88px !important;
+
       .ant-select-selection-search input {
         padding-left: 77px;
       }
     }
+
     .ant-select-selection-search-input {
       @include wh(100%);
       background: transparent;
     }
   }
+
   :deep .ant-select-multiple {
     .ant-select-selection-item {
       border-radius: 4px;
@@ -78,11 +88,13 @@
     }
   }
 }
+
 :deep .ant-select-dropdown {
   .ant-select-item-option-selected {
     background: transparent !important;
     color: #2e6ce4 !important;
   }
+
   .ant-select-item {
     &:hover {
       background: #f7f8fa !important;
