--- a/styles/radio.scss
+++ b/styles/radio.scss
@@ -13,6 +13,16 @@
     margin: 0 1px;
     color: #4e5969;
     background: #f2f3f5;
+
+    &.disabled {
+      cursor: not-allowed;
+      color: #c9cdd4;
+
+      &:hover {
+        background: #f2f3f5;
+      }
+    }
+
     &:first-child {
       border-radius: 6px 0px 0px 6px;
       margin-left: 0;
@@ -31,6 +41,7 @@
       background: #e7efff;
       color: #2e6ce4;
       font-weight: bold;
+
       &.active-alarm {
         background: #feefef;
         color: #ff4f49;
