--- a/styles/datePicker.scss
+++ b/styles/datePicker.scss
@@ -34,12 +34,17 @@
     border-right: 1px solid #c9cdd4;
     z-index: 1;
   }
+  .odos-date-picker-icon {
+    position: absolute;
+    cursor: auto;
+    right: 10px;
+  }
   .odos-date-picker-input {
     display: flex;
     box-sizing: border-box;
     align-items: center;
     border-radius: 8px;
-    padding: 10px 16px;
+    padding: 10px 30px 10px 16px;
     background: #f2f3f5;
     width: 100%;
     height: 100%;
