--- a/styles/textarea.scss
+++ b/styles/textarea.scss
@@ -1,9 +1,12 @@
 .odos-textarea {
   width: 100%;
-  .length{
-    line-height: 12px;
+  height: 100%;
+  .length {
+    line-height: 17px;
     float: right;
     font-size: 12px;
+    color: #86909c;
+    margin-top: 4px;
   }
   textarea {
     border-color: transparent;
