--- a/styles/textarea.scss
+++ b/styles/textarea.scss
@@ -1,9 +1,12 @@
 .odos-textarea {
   width: 100%;
   height: 100%;
+  position: relative;
   .length {
+    position: absolute;
     line-height: 17px;
-    float: right;
+    right: 0;
+    bottom: -15px;
     font-size: 12px;
     color: #86909c;
     margin-top: 4px;
