--- a/styles/textarea.scss
+++ b/styles/textarea.scss
@@ -6,10 +6,9 @@
     position: absolute;
     line-height: 17px;
     right: 0;
-    bottom: -15px;
+    bottom: -20px;
     font-size: 12px;
-    color: #86909c;
-    margin-top: 4px;
+    color: #ffffff;
   }
   textarea {
     border-color: transparent;
