feat(Select): 增加多选功能并调整样式
- 在 Select 组件中添加 multiple 属性以支持多选
- 调整 Select 组件的样式，使用 min-height 替代 height
- 优化 Select 组件的占位符样式，增加左侧内边距

--- a/styles/select.scss
+++ b/styles/select.scss
@@ -1,6 +1,6 @@
 @mixin wh($h) {
   width: 100%;
-  height: $h;
+  min-height: $h;
 }
 
 .odos-select {
@@ -85,6 +85,10 @@
       background: #ffffff;
       box-sizing: border-box;
       border: 1px solid #e5e6eb;
+    }
+
+    .ant-select-selection-placeholder {
+      padding-left: 77px;
     }
   }
 }
