--- a/styles/textarea.scss
+++ b/styles/textarea.scss
@@ -2,14 +2,16 @@
   width: 100%;
   height: 100%;
   position: relative;
+
   .length {
     position: absolute;
     line-height: 17px;
     right: 0;
     bottom: -20px;
     font-size: 12px;
-    color: #ffffff;
+    color: #86909c;
   }
+
   textarea {
     border-color: transparent;
     background: #f2f3f5;
