--- a/src/assets/markdown.css
+++ b/src/assets/markdown.css
@@ -217,50 +217,46 @@ blockquote {
 }
 
 table {
-  padding: 0;
-  word-break: initial;
+  width: 100%;
+  margin: 8px 0 16px;
+  border-collapse: collapse;
+  overflow: hidden;
+  background-color: #fff;
+  font-size: 14px;
+  border-radius: 8px 8px 0 0;
+}
+
+table th {
+  white-space: nowrap;
+  color: #5c6b77;
+  font-weight: 500;
+  background: #eef2ff;
+}
+
+table td,
+table th {
+  padding: 16px 24px;
+  text-align: left;
+}
+
+table tr:nth-child(even) {
+  background-color: #f8faff;
+}
+
+table tr:nth-child(odd) {
+  background-color: #fff;
 }
 
 table tr {
-  border-top: 1px solid #dfe2e5;
-  margin: 0;
-  padding: 0;
+  transition: all 0.3s;
 }
 
-table tr:nth-child(2n),
-thead {
-  background-color: #fafafa;
-}
-
-table tr th {
-  font-weight: bold;
-  border: 1px solid #dfe2e5;
-  border-bottom: 0;
-  text-align: left;
-  margin: 0;
-  padding: 6px 13px;
-}
-
-table tr td {
-  border: 1px solid #dfe2e5;
-  text-align: left;
-  margin: 0;
-  padding: 6px 13px;
-}
-
-table tr th:first-child,
-table tr td:first-child {
-  margin-top: 0;
-}
-
-table tr th:last-child,
-table tr td:last-child {
-  margin-bottom: 0;
+table tr:hover {
+  background: rgba(60, 90, 100, 0.04);
 }
 
 code {
   color: #476582;
-  padding: 0.25rem 0.5rem;
   margin: 0;
   font-size: 0.85em;
   border-radius: 3px;
