--- a/styles/loading.scss
+++ b/styles/loading.scss
@@ -59,9 +59,11 @@
 
 .odos-loading-text {
   margin-top: 32px;
-  color: #34495e;
+  color: #fff;
   font-size: 16px;
   font-weight: bold;
+  // 文字阴影
+  text-shadow: 5px 10px 20px rgb(0, 0, 0);
 }
 
 @keyframes before {
